--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "dump github context"
-        run: echo '{{$ toJSON(github.event) }}' | jq
+        run: echo '${{ toJSON(github.event) }}' | jq
         shell: bash
         
